k8s/cart-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tejaswini-capstone-app-cart-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart
  template:
    metadata:
      labels:
        app: cart
    spec:
      containers:
      - name: cart
        image: us-south1-docker.pkg.dev/citric-kit-489316-g6/teja-repo/cart-service:latest
        ports:
        - containerPort: 5003
---
apiVersion: v1
kind: Service
metadata:
  name: cart-service
spec:
  selector:
    app: cart
  ports:
    - port: 5003
      targetPort: 5003
  type: ClusterIP
