k8s/payment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tejaswini-capstone-app-payment-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
      - name: payment
        image: us-south1-docker.pkg.dev/citric-kit-489316-g6/teja-repo/payment-service:latest
        ports:
        - containerPort: 5004
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
spec:
  selector:
    app: payment
  ports:
    - port: 5004
      targetPort: 5004
  type: ClusterIP
