k8s/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tejaswini-capstone-app-ui-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
      - name: ui
        image: us-south1-docker.pkg.dev/citric-kit-489316-g6/teja-repo/ui-service:latest
        ports:
        - containerPort: 5000
          
        resources:
            requests:
              cpu: "50m"
            limits:
              cpu: "300m"

        # LIVENESS PROBE
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 10
          failureThreshold: 3

        # READINESS PROBE
        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: ui-service
spec:
  type: LoadBalancer
  selector:
    app: ui
  ports:
    - port: 80
      targetPort: 5000
